Created Profile page

--- a/index.html
+++ b/index.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Wuffs.xyz</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-        <style>
-            body,h1 {font-family: "Raleway", sans-serif}
-            body, html {height: 100%}
-            .bgimg {
-            background-image: url('/toms_cairn.jpg');
-            min-height: 100%;
-            background-position: center;
-            background-size: cover;
-            }
-        </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Nathan Wuff</title>
+        <link rel="stylesheet" href="/styles.css">
+        <script src="https://kit.fontawesome.com/f51f9f5aee.js" crossorigin="anonymous"></script>
     </head>
     <body>
-
-        <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-            <div class="w3-display-topleft w3-padding-large w3-xlarge">
-                Wuffs.xyz
+        <!-- Err, hi. what are you looking for :3 -->
+        <div class="card">
+            <img src="/media/Asym Collie PFP.png" alt="Avatar" class="avatar">
+            <h1>Nathan Wuff</h1>
+            <p>
+                19 • he/him • Gay 🏳️‍🌈 • Collie <br> Programmer • Scotland 🏴󠁧󠁢󠁳󠁣󠁴󠁿
+            </p>
+            <div class="socials">
+                <a href="https://bsky.app/profile/wuffs.xyz" title="BlueSky" class="fa-brands fa-bluesky"></a>
+                <a href="https://www.youtube.com/@nathanwuff" title="YouTube" class="fa-brands fa-youtube"></a>
+                <a href="https://www.tiktok.com/@nathanwuff" title="TikTok" class="fa-brands fa-tiktok"></a>
+                <a href="https://twitter.com/NathanWuff" title="Twitter (the bird's alive in my heart)" class="fa-brands fa-twitter"></a>
             </div>
-            <div class="w3-display-middle">
-                <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-                <hr class="w3-border-grey" style="margin:auto;width:40%">
-                <p class="w3-large w3-center">I don't know what's coming but I know something is.</p>
-            </div>
-            <div class="w3-display-bottomleft w3-padding-large">
-                Powered by <a href="https://njsharp.uk/" target="_blank">NJSharp</a>
-            </div>
+            <br>
+            <a href="/ref/" class="button">Ref sheet</a>
         </div>
-
     </body>
 </html>
