Updated bio and 88x31 button. And added favicon.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Nathan Wuff</title>
         <link rel="stylesheet" href="/styles.css">
         <script src="https://kit.fontawesome.com/f51f9f5aee.js" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/x-icon" href="/media/Asym Collie PFP.png">
     </head>
     <body>
         <!-- Err, hi. what are you looking for :3 -->
@@ -13,7 +14,7 @@
             <img src="/media/Asym Collie PFP.png" alt="Avatar" class="avatar">
             <h1>Nathan Wuff</h1>
             <p>
-                19 • he/him • Gay 🏳️‍🌈 • Collie <br> Programmer • Scotland 🏴󠁧󠁢󠁳󠁣󠁴󠁿
+                19 • he/him • Gay 🏳️‍🌈 • Collie <br> Engineer • Scotland 🏴󠁧󠁢󠁳󠁣󠁴󠁿
             </p>
             <div class="socials">
                 <a href="https://bsky.app/profile/wuffs.xyz" title="BlueSky" class="fa-brands fa-bluesky"></a>
