--- a/ref/index.html
+++ b/ref/index.html
@@ -16,6 +16,7 @@
             max-height: 100%;
         }
     </style>
+    <link rel="icon" type="image/x-icon" href="/media/Asym Collie PFP.png">
 </head>
 <html lang="en">
     <body>
