--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Nathan Wuff</title>
         <link rel="stylesheet" href="/styles.css">
         <script src="https://kit.fontawesome.com/f51f9f5aee.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/x-icon" href="/media/pfp.jpg">
+        <link rel="icon" type="image/x-icon" href="/media/icon.svg">
         <style>
             .heart {
                 position: absolute;
