--- a/about/index.html
+++ b/about/index.html
@@ -28,6 +28,7 @@
                     <!-- Add more cool fluffs -->
                     <a href="https://www.wuffs.xyz/"> <img src="https://www.wuffs.xyz/button.gif"></a>
                     <a href="https://keeri.place/"> <img src="https://keeri.place/images/button-2024.gif"></a>
+                    <a href="https://robophobia.org/"> <img src="https://robophobia.org/buttons/robophobia_button.gif"></a>
                 </div>
             </div>
         </div>
