changed all buttons to open in a new tab

--- a/about/index.html
+++ b/about/index.html
@@ -26,9 +26,9 @@
                 <div class="links">
                     <p>Some cool fluffs from the web</p>
                     <!-- Add more cool fluffs -->
-                    <a href="https://www.wuffs.xyz/"> <img src="https://www.wuffs.xyz/button.gif"></a>
-                    <a href="https://keeri.place/"> <img src="https://keeri.place/images/button-2024.gif"></a>
-                    <a href="https://robophobia.org/"> <img src="https://robophobia.org/buttons/robophobia_button.gif"></a>
+                    <a target="_blank" href="https://www.wuffs.xyz/"> <img src="https://www.wuffs.xyz/button.gif"></a>
+                    <a target="_blank" href="https://keeri.place/"> <img src="https://keeri.place/images/button-2024.gif"></a>
+                    <a target="_blank" href="https://robophobia.org/"> <img src="https://robophobia.org/buttons/robophobia_button.gif"></a>
                 </div>
             </div>
         </div>
